--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
     <main class="principal">
         <section class="principal__logo"><img src="./assets//Logo.png" alt="logo-alura"></section>
         <section class="principal__insere-texto">
-            <input class="principal__insere-texto__input" type="text">
+            <textarea name="mensagem" class="principal__insere-texto__input" rows="10" cols="25">Digite o seu texto</textarea>
             <div class="principal__insere-texto__alerta">
                 <img src="./assets/bi_exclamation-circle-fill.png" alt="exclamation-circle">
                 <p class="principal__insere-texto__alerta__paragrafo">apenas letras minusculas e sem acento</p>
             </div>
             <div class="principal__insere-texto__botoes">
-                <button class="principal__insere-texto__botoes__criptografar"></button>
-                <button class="principal__insere-texto__botoes__descriptografar"></button>
+                <button class="principal__insere-texto__botoes__botao" id="criptografar">Criptografar</button>
+                <button class="principal__insere-texto__botoes__botao" id="descriptografar">Descriptografar</button>
             </div>
         </section>
         <section class="principal__exibe-texto">
-            <img src="./assets/High quality products 1 1.svg" alt="mulher-busca">
+            <img class="principal__exibe-texto__img" src="./assets/High quality products 1 1.svg" alt="mulher-busca">
             <div class="principal__exibe-texto__no-msg">
                 <h1 class="principal__exibe-texto__no-msg__titulo">Nenhuma mensagem encontrada</h1>
                 <p class="principal__exibe-texto__no-msg__paragrafo">Digite um texto que você deseja criptografar ou descriptografar</p>
