conclusão de projeto com função de criptografia e descriptografia criada e exibição ajustada

--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
                 <h1 class="principal__exibe-texto__no-msg__titulo">Nenhuma mensagem encontrada</h1>
                 <p class="principal__exibe-texto__no-msg__paragrafo">Digite um texto que você deseja criptografar ou descriptografar</p> 
             </div>
-            <p id="texto__exibe-texto" class="principal__exibe-texto__texto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente, accusantium. Necessitatibus blanditiis odit veniam aliquam quod debitis. Debitis culpa cupiditate non voluptatem vitae quaerat earum, laboriosam tempore, expedita quis alias.</p>
-            <button class="principal__insere-texto__botoes__botao" id="copiar">Copiar</button>
+            <p id="texto__exibe-texto" class="principal__exibe-texto__texto"></p>
+            <input type="text" id="copy">
+            <button class="principal__insere-texto__botoes__botao" id="copiar" onclick="copiar()">Copiar</button>
         </section>
     </main>
     <footer></footer>
